--- a/src/email/templates/resetPassword.mjml
+++ b/src/email/templates/resetPassword.mjml
@@ -34,7 +34,7 @@
             <mj-image
               padding="10"
               width="50"
-              src="${process.env.EMAIL_IMAGE_URL_BASE}/static/apple-icon-144x144.png"
+              src="${process.env.WEB_SERVER_BASE}/static/apple-icon-144x144.png"
             />
           </mj-column>
         </mj-group>
