Updated emails, implement email verification, required for login.

--- a/src/email/templates/resetPassword.mjml
+++ b/src/email/templates/resetPassword.mjml
@@ -34,7 +34,7 @@
             <mj-image
               padding="10"
               width="50"
-              src="${process.env.WEB_SERVER_BASE}/static/apple-icon-144x144.png"
+              src="http://via.placeholder.com/200x200"
             />
           </mj-column>
         </mj-group>
@@ -71,11 +71,6 @@
           </mj-button>
         </mj-column>
       </mj-section>
-      <!-- Footer -->
-      <%= emailPartials['footer']({ data: {
-            email: data.email
-          } })
-      %>
     </mj-container>
   </mj-body>
 </mjml>
