--- a/src/email/templates/signupWelcome.mjml
+++ b/src/email/templates/signupWelcome.mjml
@@ -26,7 +26,7 @@
               font-size="20px"
               line-height="35px"
               align="center"
-            >Team Sweetcheecks</mj-text>
+            >Fitcal</mj-text>
           </mj-column>
           <mj-column
             width="40%"
@@ -50,7 +50,7 @@
             Hey ${data.first_name},
           </mj-text>
           <mj-text>
-            Thanks for joining Team Sweetcheecks.
+            Thanks for joining Fitcal.
           </mj-text>
           <mj-text>
             Click the button below to <a href="${data.verifyLink}">verify your account</a>.
